coupon applied both payments

--- a/views/user/buy-now.ejs
+++ b/views/user/buy-now.ejs
@@ -712,6 +712,7 @@ function applyCoupon(total,wallet){
             },
             body: JSON.stringify({
               selectedAdd: billingAddress.value,
+              discountTotal
             }),
           });
 
