coupon successfuly done in userside

--- a/views/user/buy-now.ejs
+++ b/views/user/buy-now.ejs
@@ -560,7 +560,9 @@ function applyCoupon(total, wallet) {
     if(response.status === 201){
       console.log('inside if')
       statusFlag = true;
-    };
+    }else{
+      statusFlag=false
+    }
     return res;  
   })
   .then(response => {
@@ -573,7 +575,8 @@ function applyCoupon(total, wallet) {
       setTimeout(() => {
         errorMessage.innerHTML = '';
       }, 2000);
-    } else if(response.status==200) {
+    } else{
+      alert("inside 200")
       document.getElementById('coupon').readOnly = true;
       document.getElementById('availableCoupon').style.display = 'none';
       document.getElementById('applyButton').disabled = true;
