soft delete done

--- a/views/admin/product-list.ejs
+++ b/views/admin/product-list.ejs
@@ -48,23 +48,34 @@ const ITEMS_PER_PAGE = 10; <%- include('../partials/adminheader') %>
                 </td>
                 <td><%= product.units%></td>
                 <td>
-                  <a
-                    href="/admin/edit-products/<%= product._id %>"
-                    class="btn btn-sm font-sm rounded btn-brand"
-                  >
-                    <i class="material-icons md-edit"></i> Edit
-                  </a>
-                  <a
-                    onclick="confirmDelete('<%= product._id %>')"
-                    href="#"
-                    class="btn btn-sm font-sm btn-light rounded"
-                  >
-                    <i
-                      class="material-icons md-delete_forever"
-                      id="deleteProduct"
-                    ></i>
-                    Delete
-                  </a>
+                  <!-- product list unlist dropdown -->
+                  <div class="dropdown">
+                    <a
+                      href="#"
+                      data-bs-toggle="dropdown"
+                      class="btn btn-light rounded btn-sm font-sm"
+                    >
+                      <i class="material-icons md-more_horiz"></i>
+                    </a>
+                    <div class="dropdown-menu">
+                      <% if (product.isListed) { %>
+                      <!-- Unlist Button -->
+                      <a
+                        href="/admin/unlistproducts/<%= product._id %>"
+                        class="btn btn-outline-success"
+                        >list</a
+                      >
+                      <% } else { %>
+                      <!-- List Button -->
+                      <a
+                        href="/admin/listproducts/<%= product._id %>"
+                        class="btn btn-outline-danger"
+                        >unlist</a
+                      >
+                      <% } %>
+                    </div>
+                  </div>
+                  <!-- product list unlist dropdown ends -->
                 </td>
               </tr>
               <% }); %>
@@ -73,32 +84,16 @@ const ITEMS_PER_PAGE = 10; <%- include('../partials/adminheader') %>
         </div>
         <!-- card-body end// -->
       </div>
-      <!-- card end// -->
-      <!-- <div class="pagination-area mt-30 mb-50">
-        <nav aria-label="Page navigation example">
-          <ul class="pagination justify-content-start">
-            <li class="page-item active">
-              <a class="page-link" href="#">01</a>
-            </li>
-            <li class="page-item"><a class="page-link" href="#">02</a></li>
-            <li class="page-item"><a class="page-link" href="#">03</a></li>
-            <li class="page-item"><a class="page-link dot" href="#">...</a></li>
-            <li class="page-item"><a class="page-link" href="#">16</a></li>
-            <li class="page-item">
-              <a class="page-link" href="#"
-                ><i class="material-icons md-chevron_right"></i
-              ></a>
-            </li>
-          </ul>
-        </nav>
-      </div> -->
+
       <div class="pagination-area mt-30 mb-50">
         <nav aria-label="Page navigation example">
           <ul class="pagination">
             <% for (let i = 1; i <= totalPages; i++) { %>
-              <li class="page-item <%= currentPage === i ? 'active' : '' %>">
-                <a class="page-link" href="/admin/product-list?page=<%= i %>"><%= i %></a>
-              </li>
+            <li class="page-item <%= currentPage === i ? 'active' : '' %>">
+              <a class="page-link" href="/admin/product-list?page=<%= i %>"
+                ><%= i %></a
+              >
+            </li>
             <% } %>
           </ul>
         </nav>
@@ -108,43 +103,3 @@ const ITEMS_PER_PAGE = 10; <%- include('../partials/adminheader') %>
     <%- include('../partials/adminfooter') %>
   </main>
 </body>
-
-<script>
-  function confirmDelete(productId) {
-    Swal.fire({
-      title: "Are you sure?",
-      text: "You won't be able to revert this!",
-      icon: "warning",
-      showCancelButton: true,
-      confirmButtonColor: "#3085d6",
-      cancelButtonColor: "#d33",
-      confirmButtonText: "Yes, delete it!",
-    }).then(async (result) => {
-      if (result.isConfirmed) {
-        try {
-          const response = await fetch(`deleteProduct/${productId}`, {
-            method: "get",
-          });
-          alert(response.status)
-            console.log(productId);
-          if (response.status==200) {
-           
-            const responseData = await response.json();
-            
-            window.location.href = responseData.redirectTo;
-          } else {
-            console.error("Failed to delete",response.statusText);
-            Swal.fire(
-              "Error",
-              "An error occurred while deleting the product.",
-              "error"
-            );
-          }
-        } catch (error) {
-          console.error("An error occurred:", error);
-          Swal.fire("Error", "An unexpected error occurred.", "error");
-        }
-      }
-    });
-  }
-</script>
