refferal just link done

--- a/views/partials/adminaside.ejs
+++ b/views/partials/adminaside.ejs
@@ -52,10 +52,10 @@
           </a>
         
         
-          <a class="menu-link" href="#">
+          <!-- <a class="menu-link" href="#">
             <i class="icon material-icons md-person"></i>
             <span class="text">Banner Management</span>
-          </a>
+          </a> -->
         
         
           <a class="menu-link" href="/admin/coupon">
