--- a/views/user/account.ejs
+++ b/views/user/account.ejs
@@ -65,8 +65,7 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+	
 
 </head>
 
@@ -237,8 +236,40 @@
   <script src="https://code.jquery.com/jquery-3.6.4.min.js"
     integrity="sha256-oP6HI/t1qJD5LsA4cmR6ujmZOdIzHLpJeQq9/SPbqE4="
     crossorigin="anonymous"></script>
+	
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   
   <script>
+function referal(id) {
+  var copyText = `http://localhost:3000/signup?id=${id}`;
+  
+  // Display success message with SweetAlert2
+  Swal.fire({
+
+    icon: 'success',
+    title: 'Copied SuccessFull',
+    showConfirmButton: false,
+    timer: 1500
+  });
+
+  // Copy the text to the clipboard
+  navigator.clipboard.writeText(copyText)
+    .then(function() {
+      console.log("Text copied to clipboard: " + copyText);
+      
+      // If you want to close something with the class 'close-container' here
+      var noThanksButton = document.querySelector('.close-container button');
+      if (noThanksButton) {
+        noThanksButton.click();
+      }
+    })
+    .catch(function(err) {
+      console.error("Failed to copy text: " + err);
+    });
+}
+
+
+
        function removeAddress(userId,addressId){
 		
         $.ajax({
