category offer done

--- a/views/admin/add-products.ejs
+++ b/views/admin/add-products.ejs
@@ -67,6 +67,23 @@
                         <small id="salePrice-error" class="error-message"></small>
                       </div>
                     </div>
+
+                    <!-- <div class="col-lg-4">
+                      <div class="mb-4">
+                        <label class="form-label">Offer price</label>
+                        <input
+                          placeholder="$"
+                          type="number"
+                          class="form-control"
+                          name="offerPrice"
+                          id="salePrice"
+                          min="0"
+                          step="0.01" 
+                          required
+                        />
+                        <small id="salePrice-error" class="error-message"></small>
+                      </div>
+                    </div> -->
                     
                     <div class="col-lg-4">
                       <label class="form-label">Unit</label>
