--- a/views/user/account.ejs
+++ b/views/user/account.ejs
@@ -103,9 +103,9 @@
 				<li class="list-group-item d-flex mt-2 justify-content-between align-items-center flex-wrap">
 					<h6 class="mb-0"><a href="/edit-profile" style="text-decoration: none; color: black;">Edit Profile</a></h6>
 				</li>
-				<li class="list-group-item d-flex mt-2 justify-content-between align-items-center flex-wrap">
+				<!-- <li class="list-group-item d-flex mt-2 justify-content-between align-items-center flex-wrap">
 					<h6 class="mb-0"><a href="/change-password"style="text-decoration: none; color: black;">Change Password</a></h6>
-				</li>
+				</li> -->
 
 				<li class="list-group-item d-flex mt-2 justify-content-between align-items-center flex-wrap">
 					<h6 class="mb-0"><a href="/wallet"style="text-decoration: none; color: black;">Wallet</a></h6>
@@ -124,10 +124,10 @@
 				<li class="list-group-item d-flex mt-2 justify-content-between align-items-center flex-wrap">
 					<h6 class="mb-0"><a href="/logout"style="text-decoration: none; color: red;">Logout</a></h6>
 				</li>
-
+<!-- 
 				<li class="list-group-item d-flex mt-2 justify-content-between align-items-center flex-wrap">
 					<h6 class="mb-0"><a href="#"style="text-decoration: none; color: red;">Delete Account</a></h6>
-				</li>
+				</li> -->
 			</ul>
 		</div>
 		  <!-- side bar ends -->
