--- a/views/partials/adminaside.ejs
+++ b/views/partials/adminaside.ejs
@@ -54,9 +54,20 @@
         
           <!-- <a class="menu-link" href="#">
             <i class="icon material-icons md-person"></i>
-            <span class="text">Banner Management</span>
+            <span class="text">Offers</span>
           </a> -->
-        
+           
+
+          <li class="menu-item has-submenu">
+            <a class="menu-link" href="#"> <i class="icon material-icons md-person"></i>
+                <span class="text">Offers</span>
+            </a>
+            <div class="submenu">
+                <a href="/admin/offerProduct">Product Offer</a>
+                <a href="/admin/offerCategory">Category Offer</a>
+               
+            </div>
+        </li>
         
           <a class="menu-link" href="/admin/coupon">
             <i class="icon material-icons md-comment"></i>
