--- a/views/user/product-details.ejs
+++ b/views/user/product-details.ejs
@@ -93,7 +93,7 @@
                                         </div>
                                         <div class="clearfix product-price-cover">
                                             <div class="product-price primary-color float-left">
-                                                <ins><span class="text-brand"><%= products.salePrice %></span></ins>
+                                                <ins><span class="text-brand"><%= products.offerPrice %></span></ins>
                                                 <ins><span class="old-price font-md ml-15">$5000.00</span></ins>
                                                 <span class="save-price  font-md color3 ml-15">25% Off</span>
                                             </div>
