--- a/views/user/product-details.ejs
+++ b/views/user/product-details.ejs
@@ -94,8 +94,8 @@
                                         <div class="clearfix product-price-cover">
                                             <div class="product-price primary-color float-left">
                                                 <ins><span class="text-brand"><%= products.offerPrice %></span></ins>
-                                                <ins><span class="old-price font-md ml-15">$5000.00</span></ins>
-                                                <span class="save-price  font-md color3 ml-15">25% Off</span>
+                                                <ins><span class="old-price font-md ml-15"><%=products.salePrice %></span></ins>
+                                                <span class="save-price  font-md color3 ml-15"><%= Math.round(((products.salePrice - products.offerPrice) / products.salePrice) * 100) %> % Off</span>
                                             </div>
                                         </div>
                                         <div class="bt-1 border-color-1 mt-15 mb-15"></div>
