--- a/views/partials/adminheader.ejs
+++ b/views/partials/adminheader.ejs
@@ -16,6 +16,8 @@
       type="image/x-icon"
       href="/assets/imgs/theme/favicon.svg"
     />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8sh+WybHt9z8ZLei6p1xhkEn5bA4JQDI9I" crossorigin="anonymous">
+
     <!-- Template CSS -->
     <link href="/assets/css/main.css" rel="stylesheet" type="text/css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
