--- a/views/admin/categoryForm.ejs
+++ b/views/admin/categoryForm.ejs
@@ -154,7 +154,7 @@
       <!-- card .// -->
     </section>
     <!-- content-main end// -->
-    <%-include('../partials/adminFooter') %>
+    <%-include('../partials/adminfooter') %>
 
     <script>
       function confirmedDelete(categoryId) {
