--- a/views/admin/coupon.ejs
+++ b/views/admin/coupon.ejs
@@ -121,7 +121,7 @@
                 </div> <!-- card body .// -->
             </div> <!-- card .// -->
         </section> <!-- content-main end// -->
-        <%-include('../partials/adminFooter') %>   
+        <%-include('../partials/adminfooter') %>   
     </main>
     
     <script src="/assets/js/vendors/jquery-3.6.0.min.js"></script>
