value of admin changed

--- a/views/admin/login.ejs
+++ b/views/admin/login.ejs
@@ -42,11 +42,11 @@
                     <h4 class="card-title mb-4">Sign in</h4>
                     <form action="/admin" method="post" id="admin-login-form">
                         <div class="mb-3">
-                            <input class="form-control" placeholder="Username" type="text" name="username" value="ahmed" required>
+                            <input class="form-control" placeholder="Username" type="text" name="username"  required>
                             <small id="username-error" class="error-message"></small>
                         </div> <!-- form-group// -->
                         <div class="mb-3">
-                            <input class="form-control" placeholder="Password" type="password" name="password" value="dem5ha8promiseA" required>
+                            <input class="form-control" placeholder="Password" type="password" name="password"  required>
                             <small id="password-error" class="error-message"></small>
                         </div> <!-- form-group// -->
                 
